# swapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker_build.sh  docker_run.sh  pyproject.toml
.circleci/: config.yml
resources/: models.py  renderers.py  serializers.py  tests.py  utils.py  views.py
resources/fixtures/: people.json
resources/migrations/: 0001_initial.py  0001_squashed_0005_remove_transport_pilots.py  0002_auto_20141213_1454.py  0003_film_release_date.py  0004_editablemodel.py
resources/schemas/: films.json  people.json  planets.json  species.json  starships.json  vehicles.json
swapi/: settings.py  urls.py  views.py  wsgi.py
swapi/templates/: 404.html  500.html  about.html  base.html  docs.md  documentation.html  index.html
swapi/templates/rest_framework/: api.html
