[tool.poetry]
name = "swapi"
version = "1.0.0"
description = "swapi"
authors = [
    "Paul Hallett"
]

[tool.poetry.dependencies]
python = "^2.7"
dj-database-url = "0.3.0"
dj-stripe = "0.3.5"
django-braces = "1.4.0"
django-clear-cache = "0.3"
django-cors-headers = "1.0.0"
django-heroku-memcacheify = "0.8"
django-jsonfield = "0.9.13"
django-markdown-deux = "1.0.5"
django-model-utils = "2.2"
django-postgrespool = "0.3.0"
django-pylibmc = "0.5.0"
djangorestframework = "3.0.0"
drf-json-api = "0.1.0"
gunicorn = "19.1.1"
markdown2 = "2.3.0"
psycopg2 = "2.7.2"
pycrypto = "2.6.1"
pylibmc = "1.4.1"
requests = "^2.23.0"
six = "1.8.0"
stripe = "^2.45.0"
whitenoise = "^3.3.1"
wsgiref = "^0.1.2"
Django = "1.7.4"
Padding = "^0.5"
SQLAlchemy = "^1.3.16"

[tool.poetry.dev-dependencies]