[tool.poetry]
name = "swapi"
version = "1.0.0"
description = "swapi"
authors = [
    "Paul Hallett"
]

[tool.poetry.dependencies]
python = "^2.7"
dj-database-url = "0.3.0"
dj-stripe = "0.3.5"
django-braces = "1.4.0"
django-clear-cache = "0.3"
django-cors-headers = "2.4.1"
django-heroku-memcacheify = "^1.0.0"
django-jsonfield = "1.0.1"
django-markdown-deux = "1.0.5"
django-model-utils = "2.2"
django-postgrespool = "0.3.0"
django-pylibmc = "^0.6.1"
djangorestframework = "3.5.4"
drf-json-api = "^0.1.1"
gunicorn = "^19.10.0"
markdown2 = "^2.3.8"
psycopg2 = "^2.8.5"
pycrypto = "2.6.1"
pylibmc = "^1.6.1"
requests = "^2.23.0"
six = "^1.14.0"
stripe = "^2.45.0"
whitenoise = "^3.3.1"
wsgiref = "^0.1.2"
Django = "~1.8.19"
Padding = "^0.5"
SQLAlchemy = "^1.3.16"

[tool.poetry.dev-dependencies]